--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -270,3 +270,68 @@ footer{
   gap: 10rem;
   margin-left: 300px;
 }
+.form__content{
+  display: flex;
+  flex-direction: row;
+}
+
+.sign__img img{
+  height: 100vh;
+  width: 602px;
+}
+.registration-form{
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  margin: 150px auto;
+}
+.name{
+  display: flex;
+  flex-direction: row;
+  gap: 6rem;
+}
+.fname,.secname{
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.name-input{
+  width: 205px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #CED4DA;
+  outline: none;
+  margin-bottom: 20px;
+}
+.form h1, .registration-form h1{
+  
+  margin:0 auto;
+}
+.form form, .registration-form  form{
+  display: flex;
+  flex-direction: column;
+  
+}
+.form-label{
+  margin-bottom: 13px;
+}
+.form-input{
+  height: 36px;
+  width: 520px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  border: 1px solid #CED4DA;
+  outline: none;
+}
+.form-submit{
+  height: 36px;
+  cursor: pointer;
+  background-color: #543ee0;
+  border: 1px solid #CED4DA;
+  border-radius: 5px;
+  color: #ffffff;
+}
